--- a/src/assets/scss/pages/_page-grid-layout.scss
+++ b/src/assets/scss/pages/_page-grid-layout.scss
@@ -55,7 +55,7 @@
       grid-row: 1 / 2;
       align-self: end;
       position: relative;
-      top: -10%;
+      top: -5%;
     }
 
     .title {
